adding h1 to html5 boilerplate

--- a/html5-boilerplate.html
+++ b/html5-boilerplate.html
@@ -40,5 +40,6 @@
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         
         <script src="" async defer></script>
+        <h1>HTML5 Boilerplate</h1>
     </body>
 </html>
